Listen for added DBus interfaces instead of registered services

Summary:
When the service is registered, the interfaces might not be available yet.
So wait for those instead.

BUG: 400359

This was RFC because:
- I'm not sure whether it's guaranteed that InterfacesAdded is emitted on
  service registration as well or both connections are necessary
- I don't know how it's possible to test this as org.kde.fakenetwork does
  not support the org.freedesktop.ObjectManager API

Test Plan:
Restarting NM while kded5 keeps running caused "nmcli up" to fail because of
missing secrets.
With this patch, it works successfully.

Reviewers: #frameworks, jgrulich

Reviewed By: jgrulich

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D16471